--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ nav ul.active {
     gap: 10px;
 }
 
-.home, .about, .skills, .soft-skills, .experience, .contact {
+.home, .about, .skills, .soft-skills, .experience, .contact, .por{
     padding: 40px 10%;
     background: linear-gradient(45deg, #101010, #1c1c1c);
     border-radius: 8px;
@@ -95,7 +95,7 @@ nav ul.active {
     overflow: hidden;
 }
 
-.home::before, .about::before, .skills::before, .soft-skills::before, .experience::before, .contact::before {
+.home::before, .about::before, .skills::before, .soft-skills::before, .experience::before, .contact::before, .por::before{
     content: '';
     position: absolute;
     top: 0;
@@ -107,7 +107,7 @@ nav ul.active {
     z-index: 1;
 }
 
-.home, .about, .skills, .soft-skills, .experience, .contact > * {
+.home, .about, .skills, .soft-skills, .por,.experience, .contact > * {
     position: relative;
     z-index: 2;
 }
@@ -369,7 +369,7 @@ footer {
         gap: 20px;
         position: absolute;
         top: 80px; /* Adjust as needed */
-        right: 20px;
+        right: 3px;
         background: #1a1a1a;
         border-radius: 8px;
         padding: 10px;
@@ -384,7 +384,7 @@ footer {
         color: #fff;
         margin-left: 200px;
     }
-    .home, .about, .skills, .soft-skills, .experience, .contact {
+    .home, .about, .skills, .soft-skills, .experience, .contact, .por{
         padding: 20px 5%;
     }
     .home {
@@ -441,3 +441,74 @@ footer {
     line-height: 50px;
 }
 
+.projects {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    padding: 20px;
+}
+
+.project-card {
+    background:linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    max-width: 600px;
+    margin: 20px;
+    
+}
+
+.project-carousel {
+    height: 300px; /* Adjust height as needed */
+    overflow: hidden;
+}
+
+.carousel-wrapper {
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.5s ease;
+    height: 100%; /* Ensure the wrapper takes full height */
+}
+
+.carousel-slide {
+    flex: 1; /* Ensure each slide takes equal vertical space */
+    transition: transform 0.5s ease;
+}
+
+.carousel-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.project-info {
+    padding: 20px;
+}
+
+.project-info h3 {
+    color: #c81010;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.project-info p {
+    font-size: 1rem;
+    color: aliceblue;
+}
+
+/* Media queries for responsiveness */
+
+@media (max-width: 768px) {
+    .projects {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    
+  
+    
+    .project-carousel {
+        height: 200px; /* Adjust carousel height for smaller screens */
+    }
+}
