--- a/styles.css
+++ b/styles.css
@@ -466,8 +466,8 @@ footer {
 }
 
 .carousel-wrapper {
-    display: flex;
-    flex-direction: column;
+   display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     transition: transform 0.5s ease;
     height: 100%; /* Ensure the wrapper takes full height */
 }
